# trufflehog-sarif

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/trufflehog_sarif/: __init__.py  converter.py
tests/: test_converter.py
